--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ header > .interface{
     align-items: center;
     justify-content: space-between;
 }
+.logo{
+    width: 85px;
+    height: 85px;
+    border-radius: 100px;
+}
 header a{
     color: #7d7d7d;
     text-decoration: none;
