--- a/style.css
+++ b/style.css
@@ -30,6 +30,14 @@ body{
     box-shadow: 0px 0px 8px #ffffff;
     transform: scale(1.05);
 }
+h2.titulo{
+    color: #ffffff;
+    font-size: 30px;
+    text-align: center;
+}
+h2.titulo span{
+    color: #ff2b60;
+}
 
 /* Estilização do <HEADER> */
 header{
@@ -103,6 +111,36 @@ section.topo-do-site .flex{
 }
 .topo-do-site .txt-topo-site p span:hover{
     color: #ff2b60;
+}
+
+/* Estilização das <ESPECIALIDADES> */
+section.especialidades{
+    padding: 40px 4%;
+}
+section.especialidades .flex{
+    gap: 30px;
+}
+.especialidades .especialidades-box{
+    color: #ffffff;
+    padding: 40px;
+    margin-top: 25px;
+    border-radius: 20px;
+    transition: 1s;
+}
+.especialidades .especialidades-box:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 10px #ffffff70;
+}
+.especialidades .especialidades-box i{
+    font-size: 40px;
+    color: #ff2b60;
+}
+.especialidades .especialidades-box h3{
+    font-size: 24px;
+    margin: 15px 0px;
+}
+.especialidades .especialidades-box p{
+    text-align: justify;
 }
 
 /* Animação de flutuação */
