--- a/style.css
+++ b/style.css
@@ -195,6 +195,51 @@ section.sobre .flex{
     transform: scale(1.05);
 }
 
+/* Estilização <PORTFOLIO> */
+section.portfolio{
+    padding: 80px 4%;
+    box-shadow: 0 0 40px 10px #7d7d7d56;
+}
+section.portfolio .flex{
+    justify-content: space-around;
+    margin-top: 60px;
+}
+.img-port{
+    width: 360px;
+    height: 460px;
+    background-color: #ff2b60;
+    background-size: cover;
+    background-position: 100% 0%;
+    transition: 8s;
+    cursor: pointer;
+    border-radius: 30px;
+    position: relative;
+}
+.img-port:hover{
+    background-position: 100% 100%;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000c2;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 600px;
+    color: #ffffff;
+    opacity: 0;
+    transition: 0.5s;
+}
+.overlay:hover{
+    opacity: 1;
+}
+
 /* Animação de flutuação */
 @keyframes flutuar{
     0%{
