--- a/style.css
+++ b/style.css
@@ -218,7 +218,6 @@ section.portfolio .flex{
 .img-port:hover{
     background-position: 100% 100%;
 }
-
 .overlay{
     position: absolute;
     top: 0;
@@ -238,6 +237,50 @@ section.portfolio .flex{
 }
 .overlay:hover{
     opacity: 1;
+}
+
+/* Estilização do <FORMULARIO> */
+section.formulario{
+    padding: 80px 4%;
+}
+form{
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+}
+form input, form textarea{
+    width: 100%;
+    background-color: #7d7d7d33;
+    border: 0;
+    outline: 0;
+    padding: 20px 15px;
+    border-radius: 15px;
+    color: #ffffff;
+    font-size: 18px;
+}
+form textarea{
+    resize: none;
+}
+form .btn-enviar{
+    margin-top: 15px;
+    text-align: center;
+}
+form .btn-enviar input{
+    width: 120px;
+    font-weight: 700;
+    transition: 0.2s;
+}
+form .btn-enviar input:hover{
+    width: 120px;
+    background-color: #ff2b60;
+    color: #000000;
+    cursor: pointer;
+    box-shadow: 0px 0px 8px #ff2b60;
+    transform: scale(1.05);
 }
 
 /* Animação de flutuação */
