--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Estilização padrão da página <GERAL> */
+/* Estilização padrão da página <GERAL> ----------------------------------------------------------------------------------------*/
 *{
     margin: 0;
     padding: 0;
@@ -54,7 +54,7 @@ h2.titulo span{
     transform: scale(1.05);
 }
 
-/* Estilização do <HEADER> */
+/* Estilização do <HEADER> -----------------------------------------------------------------------------------------------------*/
 header{
     padding: 40px 4%;
     text-decoration: none;
@@ -87,7 +87,7 @@ header nav ul li{
     padding: 0px 40px;
 }
 
-/* Estilização do <TOPO-DO-SITE> */
+/* Estilização do <TOPO-DO-SITE> -----------------------------------------------------------------------------------------------*/
 .topo-do-site .img-topo-site img{
     width: 650px;
     height: 400px;
@@ -129,7 +129,7 @@ section.topo-do-site .flex{
     color: #ff2b60;
 }
 
-/* Estilização das <ESPECIALIDADES> */
+/* Estilização das <ESPECIALIDADES> --------------------------------------------------------------------------------------------*/
 section.especialidades{
     padding: 40px 4%;
 }
@@ -165,7 +165,7 @@ section.especialidades .flex{
     align-items: center;
 }
 
-/* Estilização do <SOBRE> */
+/* Estilização do <SOBRE> ------------------------------------------------------------------------------------------------------*/
 section.sobre{
     padding: 60px 4%;
 }
@@ -195,7 +195,7 @@ section.sobre .flex{
     text-decoration: none;
 }
 
-/* Estilização <PORTFOLIO> */
+/* Estilização <PORTFOLIO> -----------------------------------------------------------------------------------------------------*/
 section.portfolio{
     padding: 80px 4%;
     box-shadow: 0 0 40px 10px #7d7d7d56;
@@ -239,7 +239,7 @@ section.portfolio .flex{
     opacity: 1;
 }
 
-/* Estilização do <FORMULARIO> */
+/* Estilização do <FORMULARIO> -------------------------------------------------------------------------------------------------*/
 section.formulario{
     padding: 80px 4%;
 }
@@ -283,7 +283,7 @@ form .btn-enviar input:hover{
     transform: scale(1.05);
 }
 
-/* Estilização <FOOTER> */
+/* Estilização <FOOTER> --------------------------------------------------------------------------------------------------------*/
 footer{
     padding: 40px 4%;
     box-shadow: 0 0 40px 10px #7d7d7d56;
@@ -308,6 +308,89 @@ footer .line-footer p i{
 }
 footer .line-footer p a{
     color: #ff2b60;
+}
+
+/* <RESPONSIVIDADE> ------------------------------------------------------------------------------------------------------------*/
+@media screen and (max-width: 1020px){
+    /* <GERAL> */
+    .flex{
+        flex-direction: column;
+    }
+    .btn-social{
+        text-align: center;
+    }
+    /* <HEADER> */
+    .menu-desktop, .btn-contato{
+        display: none;
+    }
+
+    /* <TOPO-DO-SITE> */
+    .topo-do-site .img-topo-site img{
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+    }
+    section.topo-do-site{
+        padding: 20px 4%;
+    }
+    .topo-do-site .flex{
+        flex-direction: column-reverse;
+    }
+    .topo-do-site .txt-topo-site h1{
+        font-size: 30px;
+
+    }
+    section.topo-do-site .flex{
+        gap: 40px;
+    }
+
+    /* <ESPECIALIDADES> */
+    section.especialidades{
+        padding: 40px 8%;
+    }
+    h2.titulo{
+        font-size: 25px;
+        line-height: 20px;
+    }
+
+    /* <SOBRE> */
+    section.sobre{
+        padding: 60px 8%;
+    }
+    .sobre .txt-sobre h2{
+        font-size: 30px;
+        text-align: center;
+    }
+    .sobre .img-sobre img{
+        width: 100%;
+        height: 100%;
+        border-radius: 40px;
+    }
+
+    /* <PORTFOLIO> */
+    section.portfolio{
+        padding: 80px 8%;
+    }
+    .img-port{
+        width: 100%;
+        max-width: 360px;
+        max-height: 460px;
+        margin: 0 auto;
+    }
+    section.portfolio .flex{
+        gap: 30px;
+    }
+
+    /* <FORMULARIO> */
+    /* sem alteração */
+
+    /* <FOOTER> */
+    footer .flex{
+        gap: 20px;
+    }
+    footer .line-footer{
+        text-align: center;
+    }
 }
 
 /* Animação de flutuação */
