--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ header a:hover{
 header nav ul{
     list-style-type: none;
 }
-header nav ul li{
+header nav.menu-desktop ul li{
     display: inline-block;
     padding: 0px 40px;
 }
@@ -310,6 +310,66 @@ footer .line-footer p a{
     color: #ff2b60;
 }
 
+/* Estilização do <MENU-MOBILE> ------------------------------------------------------------------------------------------------*/
+.btn-abrir-menu{
+    display: none;
+}
+.btn-abrir-menu i{
+    color: #ff2b60;
+    font-size: 60px;
+}
+.overlay-menu{
+    background-color: #000000c2;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 88888;
+    display: none;
+}
+.menu-mobile{
+    background: #ff2b60d7;
+    width: 0vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99999;
+    overflow: hidden;
+    transition: 0.2s;
+}
+.menu-mobile.abrir-menu{
+    width: 70vh;
+}
+.menu-mobile.abrir-menu ~ .overlay-menu{
+    display: block;
+}
+.menu-mobile .btn-fechar{
+    padding: 20px 4%;
+}
+.menu-mobile .btn-fechar i{
+    color: #000000;
+    font-size: 30px;
+}
+.menu-mobile nav ul{
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+}
+.menu-mobile nav ul li a{
+    padding: 20px 8%;
+    color: #ffffff;
+    font-size: 20px;
+    display: block;
+}
+.menu-mobile nav ul li a:hover{
+    background: #ffffff;
+    padding: 20px 4%;
+    color: #000000;
+    font-size: 20px;
+}
+
 /* <RESPONSIVIDADE> ------------------------------------------------------------------------------------------------------------*/
 @media screen and (max-width: 1020px){
     /* <GERAL> */
@@ -319,6 +379,7 @@ footer .line-footer p a{
     .btn-social{
         text-align: center;
     }
+
     /* <HEADER> */
     .menu-desktop, .btn-contato{
         display: none;
@@ -390,6 +451,11 @@ footer .line-footer p a{
     }
     footer .line-footer{
         text-align: center;
+    }
+
+    /* <MENU-MOBILE> */
+    .btn-abrir-menu{
+        display: block;
     }
 }
 
